--- a/app/src/main/res/layout/fragment_phrase_detail.xml
+++ b/app/src/main/res/layout/fragment_phrase_detail.xml
@@ -45,6 +45,7 @@
                 android:id="@+id/sourceLangText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="32sp"
                 android:textAppearance="@style/TextAppearance.App.Headline6" />
 
         </LinearLayout>
@@ -85,6 +86,7 @@
                 android:id="@+id/destLangText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="32sp"
                 android:textAppearance="@style/TextAppearance.App.Headline6" />
 
         </LinearLayout>
